# O_O

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: oo_cfg.h  oo_display.h
prot/: main.cpp  oo_sdl.cpp  oo_sdl.h
src/: oo_display.cpp
